--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,22 +11,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  bloc: ^7.0.0
   cupertino_icons: ^1.0.2
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  lint: ^1.5.3
 
 flutter:
 
   uses-material-design: true
-
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
-  
   # fonts:
   #   - family: Poppins
   #     fonts:
