--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bloc: ^7.0.0
+    
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^7.1.0
   http: ^0.13.3
 
 dev_dependencies:
