--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
   cupertino_icons: ^1.0.2
   flutter_bloc: ^7.1.0
+  flutter_html: ^2.1.1
   http: ^0.13.3
 
 dev_dependencies:
