--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^7.1.0
   flutter_html: ^2.1.1
   http: ^0.13.3
 
@@ -23,8 +24,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-  assets:
-    - assets/placeholder.jpg
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # fonts:
   #   - family: Poppins
