--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,10 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cached_network_image: ^3.1.0
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
   flutter_bloc: ^7.1.0
   flutter_html: ^2.1.1
   http: ^0.13.3
@@ -24,8 +25,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/placeholder.png
   #   - images/a_dot_ham.jpeg
   # fonts:
   #   - family: Poppins
