--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^7.1.0
   flutter_html: ^2.1.1
   http: ^0.13.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
