--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^7.1.0
   flutter_html: ^2.1.1
+  html_unescape: ^2.0.0
   http: ^0.13.3
   intl: ^0.17.0
 
