--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^7.1.0
   flutter_html: ^2.1.1
+  google_fonts: ^2.1.0
   html_unescape: ^2.0.0
   http: ^0.13.3
   intl: ^0.17.0
@@ -29,10 +30,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/placeholder.png
-  #   - images/a_dot_ham.jpeg
-  # fonts:
-  #   - family: Poppins
-  #     fonts:
-  #       - asset: fonts/poppins-regular.ttf
-  #       - asset: fonts/poppins-medium.ttf
-  #       - asset: fonts/poppins-bold.ttf
+
+#   - images/a_dot_ham.jpeg
+# fonts:
+#   - family: OpenSans
+#     fonts:
+#       - asset: assets/fonts/open_sanss/
