--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   html_unescape: ^2.0.0
   http: ^0.13.3
   intl: ^0.17.0
+  photo_view: ^0.12.0
 
 dev_dependencies:
   flutter_test:
@@ -31,7 +32,7 @@ flutter:
   assets:
     - assets/placeholder.png
 
-#   - images/a_dot_ham.jpeg
+  #   - images/a_dot_ham.jpeg
   fonts:
     - family: Poppins
       fonts:
