--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  bottom_navy_bar: ^6.0.0
   cached_network_image: ^3.1.0
   cupertino_icons: ^1.0.2
   flutter:
@@ -16,6 +17,7 @@ dependencies:
   flutter_bloc: ^7.1.0
   flutter_html: ^2.1.1
   google_fonts: ^2.1.0
+  hive_flutter: ^1.1.0
   html_unescape: ^2.0.0
   http: ^0.13.3
   intl: ^0.17.0
