--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,11 @@ dependencies:
   photo_view: ^0.12.0
 
 dev_dependencies:
+  build_runner: ^2.1.1
   flutter_test:
     sdk: flutter
   lint: ^1.5.3
+  hive_generator: ^1.1.0
 
 flutter:
 
