--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^7.1.0
   flutter_html: ^2.1.1
+  flutter_svg: ^0.22.0
   google_fonts: ^2.1.0
   hive_flutter: ^1.1.0
   html_unescape: ^2.0.0
@@ -27,14 +28,13 @@ dev_dependencies:
   build_runner: ^2.1.1
   flutter_test:
     sdk: flutter
-  lint: ^1.5.3
   hive_generator: ^1.1.0
+  lint: ^1.5.3
 
 flutter:
-
   uses-material-design: true
   assets:
-    - assets/placeholder.png
+    - assets/images/
 
   #   - images/a_dot_ham.jpeg
   fonts:
