--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,17 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  bottom_navy_bar: ^6.0.0
   cached_network_image: ^3.1.0
+  cloud_firestore: ^2.4.0
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.0.1
+  firebase_core: ^1.4.0
   flutter:
     sdk: flutter
   flutter_bloc: ^7.1.0
   flutter_html: ^2.1.1
   flutter_svg: ^0.22.0
-  google_fonts: ^2.1.0
+  hive: ^2.0.4
   hive_flutter: ^1.1.0
   html_unescape: ^2.0.0
   http: ^0.13.3
