--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cached_network_image: ^3.1.0
   cloud_firestore: ^2.4.0
   cupertino_icons: ^1.0.2
+  eva_icons_flutter: ^3.0.0
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
   flutter:
