--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   http: ^0.13.3
   intl: ^0.17.0
   photo_view: ^0.12.0
-  uuid: ^3.0.4
+  share: ^2.0.4
+  url_launcher: ^6.0.10
   validators: ^3.0.0
 
 dev_dependencies:
