--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  blobs: ^2.0.0
   cached_network_image: ^3.1.0
   cloud_firestore: ^2.4.0
   cupertino_icons: ^1.0.2
