--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   intl: ^0.17.0
   photo_view: ^0.12.0
   share: ^2.0.4
+  shimmer: ^2.0.0
   url_launcher: ^6.0.10
   validators: ^3.0.0
 
