--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.13.3
   intl: ^0.17.0
   photo_view: ^0.12.0
+  pull_to_refresh: ^2.0.0
   share: ^2.0.4
   shimmer: ^2.0.0
   url_launcher: ^6.0.10
