--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   blobs: ^2.0.0
   cached_network_image: ^3.1.0
   cloud_firestore: ^2.4.0
+  connectivity_plus: ^1.1.0
   cupertino_icons: ^1.0.2
   eva_icons_flutter: ^3.0.0
   firebase_auth: ^3.0.1
