--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,15 @@ dev_dependencies:
   build_runner: ^2.1.1
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^1.2.4
   hive_generator: ^1.1.0
   lint: ^1.5.3
+  
+flutter_native_splash:
+  image: assets/images/logo.png
+  color: "#ffffff"
+  color_dark: "#212121"
+  web: false
 
 flutter:
   uses-material-design: true
